--- a/styles/main.css
+++ b/styles/main.css
@@ -41,6 +41,13 @@
   font-style: normal;
 }
 
+.fs-14 {
+  font-size: 0.875rem;
+}
+
+.fs-24 {
+  font-size: 1.5rem;
+}
 
 /************** resets **************/
 * {
